solved flickr issues

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="md-1">
             <div class="search">
                 <img class="search-icon" src="img/search.svg" alt="searchlog">
-                <input class="search-input" type="search" placeholder="type your favourite place here" data-bind="textInput: input, event: {keyup: filter}">
+                <input class="search-input" type="text" placeholder="type your favourite place here" data-bind="textInput: input, event: {keyup: filter}">
                 <img class="down-btn" alt="showlist button" src="img/down.svg" data-bind="click: showlist,style: {display: down}">
             </div>
             <div class="marked-places" data-bind="style: {display: display}">
